deploy/kubectl/serving/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spam
  name: spam
spec:
  ports:
  - port: 5000
  selector:
    app: spam
