deploy/kubectl/serving/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spam
spec:
  rules:
  - host: spam.lvh.me
    http:
      paths:
      - backend:
          service:
            name: spam
            port:
              number: 5000
        path: /
        pathType: Prefix
